# wheat-detection

./: .gitignore  README.md  pyproject.toml
wheat_detection/: datamodule.py  logger.py  model.py  train.py  transforms.py
