[tool.poetry]
name = "wheat_detection"
version = "0.1.0"
description = ""
authors = ["onion <kosukekito38@gmail.com>"]
readme = "README.md"
packages = [{include = "wheat_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^2.0.4"
pandas = "^2.0.3"
pydantic = "^2.0"
torchvision = "^0.15.2"


[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
black = "^23.3.0"
isort = "^5.12.0"
kaggle = "^1.5.15"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

